Add java-adaptor