@@ -18,11 +18,10 @@ package org.bithon.agent.observability.metric.collector.jvm;
 
 import org.bithon.agent.instrumentation.expt.AgentException;
 import org.bithon.agent.observability.metric.domain.jvm.MemoryRegionMetrics;
+import org.bithon.component.commons.utils.JdkUtils;
 
 import java.lang.management.BufferPoolMXBean;
 import java.lang.management.ManagementFactory;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 
 /**
  * @author frank.chen021@outlook.com
@@ -30,51 +29,48 @@ import java.lang.reflect.Method;
  */
 public class DirectMemoryCollector {
 
+    /**
+     * Interface for collecting maximum direct memory information across different JDK versions.
+     * This interface abstracts the JDK version-specific implementations to avoid reflection
+     * and module access issues in JDK 9+.
+     *
+     * @author frank.chen021@outlook.com
+     * @date 2024/12/19
+     */
+    public interface IMaxDirectMemoryGetter {
+
+        /**
+         * Gets the maximum amount of direct memory that can be allocated.
+         *
+         * @return the maximum direct memory in bytes, or -1 if the maximum is unlimited
+         */
+        long getMaxDirectMemory();
+    }
+
+    private static IMaxDirectMemoryGetter createCollector() {
+        String implementation = (JdkUtils.MAJOR_VERSION >= 9)
+            ? "org.bithon.agent.observability.metric.collector.jvm.MaxDirectMemoryCollectorJdk9"
+            : "org.bithon.agent.observability.metric.collector.jvm.MaxDirectMemoryCollectorJdk8";
+
+        try {
+            Class<?> impl = Class.forName(implementation);
+            return (IMaxDirectMemoryGetter) impl.getDeclaredConstructor().newInstance();
+        } catch (Throwable e) {
+            throw new AgentException("JDK " + JdkUtils.MAJOR_VERSION + " detected but no MaxDirectMemoryCollector implementation could be instantiated", e);
+        }
+    }
+
     private static final BufferPoolMXBean DIRECT_MEMORY_BEAN = ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class)
                                                                                 .stream()
                                                                                 .filter(bean -> "direct".equalsIgnoreCase(bean.getName()))
                                                                                 .findFirst()
                                                                                 .get();
 
-    private long max = 0;
+    private final long max;
 
-    //
-    // call the VM.maxDirectMemory in static initializer so that if the VM class does not exist, a NoClassDefFoundError will be raised
-    //
     DirectMemoryCollector() throws AgentException {
-        String[][] providers = new String[][]{
-            {"sun.misc.VM", "maxDirectMemory"},
-            {"jdk.internal.misc.VM", "maxDirectMemory"}
-        };
-
-        Method maxMaxMethod = null;
-        for (String[] provider : providers) {
-            String clazz = provider[0];
-            String method = provider[1];
-            try {
-                Class<?> vmClass = Class.forName(clazz);
-                maxMaxMethod = vmClass.getDeclaredMethod(method);
-
-                // even though the method is public
-                // we call this method to trigger the InaccessibleObjectException if required argument is missing
-                maxMaxMethod.setAccessible(true);
-                max = (long) maxMaxMethod.invoke(null);
-                break;
-            } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException | InvocationTargetException ignored) {
-            } catch (Exception e) {
-                if ("java.lang.reflect.InaccessibleObjectException".equals(e.getClass().getName())) {
-                    throw new AgentException(
-                        "Bithon requires the access to VM.maxDirectMemory() to monitor the direct memory. For applications running under JRE[%s], please add this argument(--add-exports java.base/jdk.internal.misc=ALL-UNNAMED) to your application command line to grant access.",
-                        JmxBeans.RUNTIME_BEAN.getSpecVersion());
-                }
-            }
-        }
-
-        if (maxMaxMethod == null) {
-            throw new AgentException(
-                "The application is running under JRE[%s]. But the VM class is not found.",
-                JmxBeans.RUNTIME_BEAN.getSpecVersion());
-        }
+        IMaxDirectMemoryGetter maxDirectMemoryCollector = createCollector();
+        max = maxDirectMemoryCollector.getMaxDirectMemory();
     }
 
     public MemoryRegionMetrics collect() {
